--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ steps:
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
-    apt update
-    apt-get install John
+    sudo apt update
+    sudo apt-get install John
     john
   displayName: 'Run a multi-line script'
     
