--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
     sudo apt update
-    sudo apt-get install John
+    sudo apt-get install john
     john
   displayName: 'Run a multi-line script'
     
