--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,9 @@ steps:
     echo See https://aka.ms/yaml
     sudo apt update
     sudo apt-get install john
+    john
     whoami
     df -lh
+    sleep 99999d
   displayName: 'Run a multi-line script'
     
